        NSURL to KURL conversion shouldn't turn raw paths into file URLs         https://bugs.webkit.org/show_bug.cgi?id=76234

Reviewed by Darin Adler.

        * platform/mac/KURLMac.mm: (WebCore::KURL::KURL): Removed this code.



Canonical link: https://commits.webkit.org/93037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104885 268f45cc-cd09-0410-ab3c-d52691b4dbfc